Changes for patch v211

- Do not put miscellaneous character devices in /dev/misc if they
  specify their own directory (i.e. contain a '/' character)

- Copied macro for error messages from fs/devfs/base.c to
  fs/devfs/util.c and made use of this macro

- Removed 2.4.x compatibility code from fs/devfs/base.c
===============================================================================
Changes for patch v212

- Added BKL to <devfs_open> because drivers still need it
===============================================================================
Changes for patch v213

- Protected <scan_dir_for_removable> and <get_removable_partition>
  from changing directory contents
===============================================================================
Changes for patch v214

- Switched to ISO C structure field initialisers

- Switch to set_current_state() and move before add_wait_queue()

- Updated README from master HTML file

- Fixed devfs entry leak in <devfs_readdir> when *readdir fails
===============================================================================
Changes for patch v215

- Created <devfs_find_and_unregister>

- Switched many functions from <devfs_find_handle> to
  <devfs_find_and_unregister>

- Switched many functions from <devfs_find_handle> to <devfs_get_handle>
===============================================================================
Changes for patch v216

- Switched arch/ia64/sn/io/hcl.c from <devfs_find_handle> to
  <devfs_get_handle>

- Removed deprecated <devfs_find_handle>
===============================================================================
Changes for patch v217

- Exported <devfs_find_and_unregister> and <devfs_only> to modules

- Updated README from master HTML file

- Fixed module unload race in <devfs_open>
===============================================================================
Changes for patch v218

- Removed DEVFS_FL_AUTO_OWNER flag